--- a/src/main/resources/static/css/kurs.css
+++ b/src/main/resources/static/css/kurs.css
@@ -46,7 +46,7 @@
         min-width: 400px;
         max-width: 600px;
         width: 22%;
-        box-shadow: 7px 0px 20px -12px #B3B3B3;
+        box-shadow: 7px 0 20px -12px #B3B3B3;
         z-index: 1;
     }
 
